--- a/.eslintrc
+++ b/.eslintrc
@@ -1,13 +1,11 @@
 {
-  "plugins": ["prettier"],
-  "extends": ["next", "next/core-web-vitals", "prettier"],
+  "extends": ["next", "next/core-web-vitals"],
   "rules": {
-    "prettier/prettier": "error",
     "camelcase": "off",
     "import/prefer-default-export": "off",
     "react/jsx-filename-extension": "off",
-    "react/jsx-props-no-spreading": "off",
-    "react/no-unused-prop-types": "off",
+    "react/jsx-props-no-spreading": "on",
+    "react/no-unused-prop-types": "on",
     "react/require-default-props": "off",
     "import/extensions": [
       "error",
@@ -19,22 +17,14 @@
         "jsx": "never"
       }
     ],
-    "quotes": "off",
-    "jsx-a11y/anchor-is-valid": [
-      "error",
-      {
-        "components": ["Link"],
-        "specialLink": ["hrefLeft", "hrefRight"],
-        "aspects": ["invalidHref", "preferButton"]
-      }
-    ]
+    "quotes": "off"
   },
   "overrides": [
     {
       "files": "**/*.+(ts|tsx)",
       "parser": "@typescript-eslint/parser",
       "plugins": ["@typescript-eslint/eslint-plugin"],
-      "extends": ["plugin:@typescript-eslint/recommended", "prettier"],
+      "extends": ["plugin:@typescript-eslint/recommended"],
       "rules": {
         "@typescript-eslint/explicit-function-return-type": "off",
         "@typescript-eslint/explicit-module-boundary-types": "off",
