--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "hec-degree-verification-portal",
-  "description": "A TypeScript starter for Next.js that includes all you need to build amazing projects",
+  "description": "great project",
   "version": "1.0.0",
   "private": true,
   "author": "Kashif Siddique 18094198-026",
@@ -41,6 +41,7 @@
     "@fortawesome/free-solid-svg-icons": "^5.15.4",
     "@fortawesome/react-fontawesome": "^0.1.18",
     "@material-ui/core": "^4.12.3",
+    "@material-ui/styles": "4.11.5",
     "@mui/icons-material": "^5.4.2",
     "@mui/lab": "5.0.0-alpha.94",
     "@mui/material": "5.10.0",
@@ -54,6 +55,7 @@
     "cookies-next": "2.1.1",
     "crypto-js": "4.1.1",
     "date-fns": "2.28.0",
+    "depcheck": "1.4.3",
     "framer-motion": "^6.2.9",
     "jsonwebtoken": "8.5.1",
     "moment": "^2.29.2",
@@ -68,12 +70,14 @@
     "next-session": "4.0.5",
     "nextjs-progressbar": "0.0.14",
     "nodemailer": "6.7.8",
+    "prop-types": "15.8.1",
     "react": "17.0.2",
     "react-dom": "^17.0.2",
     "react-loading": "2.0.3",
     "react-redux": "8.0.2",
     "react-router-dom": "^6.3.0",
     "react-swipeable-views": "0.14.0",
+    "react-swipeable-views-utils": "0.14.0",
     "redux": "4.2.0",
     "redux-devtools-extension": "2.13.9",
     "redux-thunk": "2.4.1",
@@ -82,24 +86,17 @@
     "uuid": "8.3.2"
   },
   "devDependencies": {
-    "@commitlint/cli": "16.2.4",
-    "@commitlint/config-conventional": "16.2.4",
     "@types/crypto-js": "4.1.1",
     "@types/multer": "1.4.7",
     "@types/node": "17.0.18",
     "@types/react": "17.0.39",
     "@types/react-dom": "17.0.16",
-    "@types/uuid": "8.3.4",
     "@typescript-eslint/eslint-plugin": "5.22.0",
     "@typescript-eslint/parser": "5.22.0",
     "commitizen": "4.2.4",
     "cz-conventional-changelog": "3.3.0",
     "eslint": "8.9.0",
     "eslint-config-next": "12.0.10",
-    "eslint-config-prettier": "8.5.0",
-    "eslint-import-resolver-typescript": "2.7.1",
-    "eslint-plugin-prettier": "4.0.0",
-    "husky": "7.0.4",
     "lint-staged": "12.4.1",
     "prettier": "2.6.2",
     "typescript": "4.5.5"
